--- a/Web_Scrapping1.ipynb
+++ b/Web_Scrapping1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -892,16 +892,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11"
+       "<article class=\"product_pod\">\n",
+       "<div class=\"image_container\">\n",
+       "<a href=\"../../../sophies-world_966/index.html\"><img alt=\"Sophie's World\" class=\"thumbnail\" src=\"../../../../media/cache/65/71/6571919836ec51ed54f0050c31d8a0cd.jpg\"/></a>\n",
+       "</div>\n",
+       "<p class=\"star-rating Five\">\n",
+       "<i class=\"icon-star\"></i>\n",
+       "<i class=\"icon-star\"></i>\n",
+       "<i class=\"icon-star\"></i>\n",
+       "<i class=\"icon-star\"></i>\n",
+       "<i class=\"icon-star\"></i>\n",
+       "</p>\n",
+       "<h3><a href=\"../../../sophies-world_966/index.html\" title=\"Sophie's World\">Sophie's World</a></h3>\n",
+       "<div class=\"product_price\">\n",
+       "<p class=\"price_color\">Â£15.94</p>\n",
+       "<p class=\"instock availability\">\n",
+       "<i class=\"icon-ok\"></i>\n",
+       "    \n",
+       "        In stock\n",
+       "    \n",
+       "</p>\n",
+       "<form>\n",
+       "<button class=\"btn btn-primary btn-block\" data-loading-text=\"Adding...\" type=\"submit\">Add to basket</button>\n",
+       "</form>\n",
+       "</div>\n",
+       "</article>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
