--- a/Working_With_CSV.ipynb
+++ b/Working_With_CSV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,16 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('aug_train.csv')"
+    "df = pd.read_csv('.\\\\Datasets\\\\aug_train.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "4               8     0.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "[194 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -436,13 +436,13 @@
        "4  ['action' 'comedy' 'crime' 'drama' 'thriller']  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('movie_titles_metadata.tsv',sep='\\t',names=['sn','movie_name','release_year','rating','votes','genres'])\n",
+    "df = pd.read_csv('.\\\\Datasets\\\\movie_titles_metadata.tsv',sep='\\t',names=['sn','movie_name','release_year','rating','votes','genres'])\n",
     "df.head()"
    ]
   },
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -621,13 +621,13 @@
        "666                50-99  Funded Startup            4               8     0.0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv('aug_train.csv',index_col='enrollee_id').head()"
+    "pd.read_csv('.\\\\Datasets\\\\aug_train.csv',index_col='enrollee_id').head()"
    ]
   },
   {
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -783,13 +783,13 @@
        "3               8       0  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv('test.csv',header=1)"
+    "pd.read_csv('.\\\\Datasets\\\\test.csv',header=1)"
    ]
   },
   {
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -868,13 +868,13 @@
        "4          666     0.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv('aug_train.csv',usecols=['enrollee_id','target']).head()"
+    "pd.read_csv('.\\\\Datasets\\\\aug_train.csv',usecols=['enrollee_id','target']).head()"
    ]
   },
   {
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1046,13 +1046,13 @@
        "4              24     0.0  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv('aug_train.csv',skiprows=[1,3]).head()"
+    "pd.read_csv('.\\\\Datasets\\\\aug_train.csv',skiprows=[1,3]).head()"
    ]
   },
   {
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1353,13 +1353,13 @@
        "[100 rows x 14 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv('aug_train.csv',nrows=100)"
+    "pd.read_csv('.\\\\Datasets\\\\aug_train.csv',nrows=100)"
    ]
   },
   {
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1597,13 +1597,13 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv('zomato.csv',encoding='latin-1').head()"
+    "pd.read_csv('.\\\\Datasets\\\\zomato.csv',encoding='latin-1').head()"
    ]
   },
   {
@@ -1631,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1663,7 +1663,7 @@
     }
    ],
    "source": [
-    "pd.read_csv('aug_train.csv',dtype={'target': int}).info()"
+    "pd.read_csv('.\\\\Datasets\\\\aug_train.csv',dtype={'target': int}).info()"
    ]
   },
   {
@@ -1675,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1710,7 +1710,7 @@
     }
    ],
    "source": [
-    "pd.read_csv(\"IPL Matches 2008-2020.csv\", parse_dates=['date']).info()"
+    "pd.read_csv(\".\\\\Datasets\\\\IPL Matches 2008-2020.csv\", parse_dates=['date']).info()"
    ]
   },
   {
@@ -1722,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1735,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1920,13 +1920,13 @@
        "4  wickets            5.0          N    NaN  BF Bowden     K Hariharan  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv(\"IPL Matches 2008-2020.csv\",converters={'team1':rename}).head()"
+    "pd.read_csv(\".\\\\Datasets\\\\IPL Matches 2008-2020.csv\",converters={'team1':rename}).head()"
    ]
   },
   {
@@ -1938,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2227,13 +2227,13 @@
        "[19158 rows x 14 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv('aug_train.csv',na_values=['Male', 'city_103'])"
+    "pd.read_csv('.\\\\Datasets\\\\aug_train.csv',na_values=['Male', 'city_103'])"
    ]
   },
   {
@@ -2245,7 +2245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2260,7 +2260,7 @@
     }
    ],
    "source": [
-    "dff = pd.read_csv('aug_train.csv',chunksize=5000)\n",
+    "dff = pd.read_csv('.\\\\Datasets\\\\aug_train.csv',chunksize=5000)\n",
     "for chunks in dff:\n",
     "  print(chunks.shape)"
    ]
