--- a/Working_With_JSON.ipynb
+++ b/Working_With_JSON.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,19 +79,19 @@
        "4  35687  [ground black pepper, salt, sausage casings, l..."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_json('test.json')\n",
+    "df = pd.read_json('.\\\\Datasets\\\\test.json')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,8 +131,8 @@
        "      <td>https://www.exchangerate-api.com/docs/free</td>\n",
        "      <td>https://www.exchangerate-api.com/terms</td>\n",
        "      <td>INR</td>\n",
-       "      <td>2024-09-25</td>\n",
-       "      <td>1727222401</td>\n",
+       "      <td>2024-09-27</td>\n",
+       "      <td>1727395201</td>\n",
        "      <td>1.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -141,8 +141,8 @@
        "      <td>https://www.exchangerate-api.com/docs/free</td>\n",
        "      <td>https://www.exchangerate-api.com/terms</td>\n",
        "      <td>INR</td>\n",
-       "      <td>2024-09-25</td>\n",
-       "      <td>1727222401</td>\n",
+       "      <td>2024-09-27</td>\n",
+       "      <td>1727395201</td>\n",
        "      <td>0.0439</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -151,9 +151,9 @@
        "      <td>https://www.exchangerate-api.com/docs/free</td>\n",
        "      <td>https://www.exchangerate-api.com/terms</td>\n",
        "      <td>INR</td>\n",
-       "      <td>2024-09-25</td>\n",
-       "      <td>1727222401</td>\n",
-       "      <td>0.8210</td>\n",
+       "      <td>2024-09-27</td>\n",
+       "      <td>1727395201</td>\n",
+       "      <td>0.8180</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ALL</th>\n",
@@ -161,9 +161,9 @@
        "      <td>https://www.exchangerate-api.com/docs/free</td>\n",
        "      <td>https://www.exchangerate-api.com/terms</td>\n",
        "      <td>INR</td>\n",
-       "      <td>2024-09-25</td>\n",
-       "      <td>1727222401</td>\n",
-       "      <td>1.0700</td>\n",
+       "      <td>2024-09-27</td>\n",
+       "      <td>1727395201</td>\n",
+       "      <td>1.0600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AMD</th>\n",
@@ -171,8 +171,8 @@
        "      <td>https://www.exchangerate-api.com/docs/free</td>\n",
        "      <td>https://www.exchangerate-api.com/terms</td>\n",
        "      <td>INR</td>\n",
-       "      <td>2024-09-25</td>\n",
-       "      <td>1727222401</td>\n",
+       "      <td>2024-09-27</td>\n",
+       "      <td>1727395201</td>\n",
        "      <td>4.6300</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -195,21 +195,21 @@
        "AMD  https://www.exchangerate-api.com/docs/free   \n",
        "\n",
        "                                      terms base       date  \\\n",
-       "INR  https://www.exchangerate-api.com/terms  INR 2024-09-25   \n",
-       "AED  https://www.exchangerate-api.com/terms  INR 2024-09-25   \n",
-       "AFN  https://www.exchangerate-api.com/terms  INR 2024-09-25   \n",
-       "ALL  https://www.exchangerate-api.com/terms  INR 2024-09-25   \n",
-       "AMD  https://www.exchangerate-api.com/terms  INR 2024-09-25   \n",
+       "INR  https://www.exchangerate-api.com/terms  INR 2024-09-27   \n",
+       "AED  https://www.exchangerate-api.com/terms  INR 2024-09-27   \n",
+       "AFN  https://www.exchangerate-api.com/terms  INR 2024-09-27   \n",
+       "ALL  https://www.exchangerate-api.com/terms  INR 2024-09-27   \n",
+       "AMD  https://www.exchangerate-api.com/terms  INR 2024-09-27   \n",
        "\n",
        "     time_last_updated   rates  \n",
-       "INR         1727222401  1.0000  \n",
-       "AED         1727222401  0.0439  \n",
-       "AFN         1727222401  0.8210  \n",
-       "ALL         1727222401  1.0700  \n",
-       "AMD         1727222401  4.6300  "
+       "INR         1727395201  1.0000  \n",
+       "AED         1727395201  0.0439  \n",
+       "AFN         1727395201  0.8180  \n",
+       "ALL         1727395201  1.0600  \n",
+       "AMD         1727395201  4.6300  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
