--- a/EDA_Univariate_Analysis.ipynb
+++ b/EDA_Univariate_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -53,78 +53,78 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>435</th>\n",
-       "      <td>436</td>\n",
+       "      <th>305</th>\n",
+       "      <td>306</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>Carter, Miss. Lucile Polk</td>\n",
-       "      <td>female</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>Allison, Master. Hudson Trevor</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0.92</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>113760</td>\n",
-       "      <td>120.0000</td>\n",
-       "      <td>B96 B98</td>\n",
+       "      <td>113781</td>\n",
+       "      <td>151.5500</td>\n",
+       "      <td>C22 C26</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>29</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>O'Dwyer, Miss. Ellen \"Nellie\"</td>\n",
-       "      <td>female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>330959</td>\n",
-       "      <td>7.8792</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Q</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>868</th>\n",
-       "      <td>869</td>\n",
+       "      <th>105</th>\n",
+       "      <td>106</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>van Melkebeke, Mr. Philemon</td>\n",
+       "      <td>Mionoff, Mr. Stoytcho</td>\n",
        "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>28.00</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>345777</td>\n",
-       "      <td>9.5000</td>\n",
+       "      <td>349207</td>\n",
+       "      <td>7.8958</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>502</th>\n",
-       "      <td>503</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>O'Sullivan, Miss. Bridget Mary</td>\n",
-       "      <td>female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>330909</td>\n",
-       "      <td>7.6292</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Q</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>331</th>\n",
-       "      <td>332</td>\n",
+       "      <th>625</th>\n",
+       "      <td>626</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>Partner, Mr. Austen</td>\n",
+       "      <td>Sutton, Mr. Frederick</td>\n",
        "      <td>male</td>\n",
-       "      <td>45.5</td>\n",
+       "      <td>61.00</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>113043</td>\n",
-       "      <td>28.5000</td>\n",
-       "      <td>C124</td>\n",
+       "      <td>36963</td>\n",
+       "      <td>32.3208</td>\n",
+       "      <td>D50</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>292</th>\n",
+       "      <td>293</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Levy, Mr. Rene Jacques</td>\n",
+       "      <td>male</td>\n",
+       "      <td>36.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SC/Paris 2163</td>\n",
+       "      <td>12.8750</td>\n",
+       "      <td>D</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>819</th>\n",
+       "      <td>820</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Skoog, Master. Karl Thorsten</td>\n",
+       "      <td>male</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>347088</td>\n",
+       "      <td>27.9000</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -132,28 +132,28 @@
        "</div>"
       ],
       "text/plain": [
-       "     PassengerId  Survived  Pclass                            Name     Sex  \\\n",
-       "435          436         1       1       Carter, Miss. Lucile Polk  female   \n",
-       "28            29         1       3   O'Dwyer, Miss. Ellen \"Nellie\"  female   \n",
-       "868          869         0       3     van Melkebeke, Mr. Philemon    male   \n",
-       "502          503         0       3  O'Sullivan, Miss. Bridget Mary  female   \n",
-       "331          332         0       1             Partner, Mr. Austen    male   \n",
+       "     PassengerId  Survived  Pclass                            Name   Sex  \\\n",
+       "305          306         1       1  Allison, Master. Hudson Trevor  male   \n",
+       "105          106         0       3           Mionoff, Mr. Stoytcho  male   \n",
+       "625          626         0       1           Sutton, Mr. Frederick  male   \n",
+       "292          293         0       2          Levy, Mr. Rene Jacques  male   \n",
+       "819          820         0       3    Skoog, Master. Karl Thorsten  male   \n",
        "\n",
-       "      Age  SibSp  Parch  Ticket      Fare    Cabin Embarked  \n",
-       "435  14.0      1      2  113760  120.0000  B96 B98        S  \n",
-       "28    NaN      0      0  330959    7.8792      NaN        Q  \n",
-       "868   NaN      0      0  345777    9.5000      NaN        S  \n",
-       "502   NaN      0      0  330909    7.6292      NaN        Q  \n",
-       "331  45.5      0      0  113043   28.5000     C124        S  "
+       "       Age  SibSp  Parch         Ticket      Fare    Cabin Embarked  \n",
+       "305   0.92      1      2         113781  151.5500  C22 C26        S  \n",
+       "105  28.00      0      0         349207    7.8958      NaN        S  \n",
+       "625  61.00      0      0          36963   32.3208      D50        S  \n",
+       "292  36.00      0      0  SC/Paris 2163   12.8750        D        C  \n",
+       "819  10.00      3      2         347088   27.9000      NaN        S  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('titanic_train.csv')\n",
+    "df = pd.read_csv('.\\\\Datasets\\\\titanic_train.csv')\n",
     "df.sample(5)\n",
     "# df.isnull().sum()\n",
     "# df.info()\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "<Axes: xlabel='Survived', ylabel='count'>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "<Axes: xlabel='Pclass'>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "<Axes: ylabel='count'>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        " <BarContainer object of 50 artists>)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -327,14 +327,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Acer1\\AppData\\Local\\Temp\\ipykernel_28148\\3255828239.py:1: UserWarning: \n",
+      "C:\\Users\\Acer1\\AppData\\Local\\Temp\\ipykernel_28228\\3255828239.py:1: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -353,7 +353,7 @@
        "<Axes: xlabel='Age', ylabel='Density'>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "<Axes: xlabel='Age'>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "29.69911764705882"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
