--- a/Understanding_Data.ipynb
+++ b/Understanding_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('titanic_train.csv')"
+    "df = pd.read_csv('.\\\\Datasets\\\\titanic_train.csv')"
    ]
   },
   {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,78 +94,78 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>208</th>\n",
-       "      <td>209</td>\n",
-       "      <td>1</td>\n",
+       "      <th>396</th>\n",
+       "      <td>397</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>Carr, Miss. Helen \"Ellen\"</td>\n",
+       "      <td>Olsson, Miss. Elina</td>\n",
        "      <td>female</td>\n",
-       "      <td>16.0</td>\n",
+       "      <td>31.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>367231</td>\n",
+       "      <td>350407</td>\n",
+       "      <td>7.8542</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>722</th>\n",
+       "      <td>723</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Gillespie, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12233</td>\n",
+       "      <td>13.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>793</th>\n",
+       "      <td>794</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Hoyt, Mr. William Fisher</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17600</td>\n",
+       "      <td>30.6958</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260</th>\n",
+       "      <td>261</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Smith, Mr. Thomas</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>384461</td>\n",
        "      <td>7.7500</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Q</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>285</th>\n",
-       "      <td>286</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Stankovic, Mr. Ivan</td>\n",
+       "      <th>224</th>\n",
+       "      <td>225</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Hoyt, Mr. Frederick Maxfield</td>\n",
        "      <td>male</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>349239</td>\n",
-       "      <td>8.6625</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>276</th>\n",
-       "      <td>277</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Lindblom, Miss. Augusta Charlotta</td>\n",
-       "      <td>female</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>347073</td>\n",
-       "      <td>7.7500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>393</th>\n",
-       "      <td>394</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Newell, Miss. Marjorie</td>\n",
-       "      <td>female</td>\n",
-       "      <td>23.0</td>\n",
+       "      <td>38.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>35273</td>\n",
-       "      <td>113.2750</td>\n",
-       "      <td>D36</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>313</th>\n",
-       "      <td>314</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Hendekovic, Mr. Ignjac</td>\n",
-       "      <td>male</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>349243</td>\n",
-       "      <td>7.8958</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>19943</td>\n",
+       "      <td>90.0000</td>\n",
+       "      <td>C93</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -173,22 +173,22 @@
        "</div>"
       ],
       "text/plain": [
-       "     PassengerId  Survived  Pclass                               Name     Sex  \\\n",
-       "208          209         1       3          Carr, Miss. Helen \"Ellen\"  female   \n",
-       "285          286         0       3                Stankovic, Mr. Ivan    male   \n",
-       "276          277         0       3  Lindblom, Miss. Augusta Charlotta  female   \n",
-       "393          394         1       1             Newell, Miss. Marjorie  female   \n",
-       "313          314         0       3             Hendekovic, Mr. Ignjac    male   \n",
+       "     PassengerId  Survived  Pclass                          Name     Sex  \\\n",
+       "396          397         0       3           Olsson, Miss. Elina  female   \n",
+       "722          723         0       2  Gillespie, Mr. William Henry    male   \n",
+       "793          794         0       1      Hoyt, Mr. William Fisher    male   \n",
+       "260          261         0       3             Smith, Mr. Thomas    male   \n",
+       "224          225         1       1  Hoyt, Mr. Frederick Maxfield    male   \n",
        "\n",
-       "      Age  SibSp  Parch  Ticket      Fare Cabin Embarked  \n",
-       "208  16.0      0      0  367231    7.7500   NaN        Q  \n",
-       "285  33.0      0      0  349239    8.6625   NaN        C  \n",
-       "276  45.0      0      0  347073    7.7500   NaN        S  \n",
-       "393  23.0      1      0   35273  113.2750   D36        C  \n",
-       "313  28.0      0      0  349243    7.8958   NaN        S  "
+       "      Age  SibSp  Parch    Ticket     Fare Cabin Embarked  \n",
+       "396  31.0      0      0    350407   7.8542   NaN        S  \n",
+       "722  34.0      0      0     12233  13.0000   NaN        S  \n",
+       "793   NaN      0      0  PC 17600  30.6958   NaN        C  \n",
+       "260   NaN      0      0    384461   7.7500   NaN        Q  \n",
+       "224  38.0      1      0     19943  90.0000   C93        S  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
        "0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
