updated GDRegressor class

--- a/Linear Regression/GradientDescent_Class.ipynb
+++ b/Linear Regression/GradientDescent_Class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x220a6b0bfe0>"
+       "<matplotlib.collections.PathCollection at 0x220a7019520>"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -54,16 +54,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2,random_state=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[35.69904955]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(array([27.82809103]), -2.29474455867698)"
+       "(array([28.12597332]), -2.2710144261783825)"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,22 +88,55 @@
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "reg = LinearRegression()\n",
-    "reg.fit(X,y)\n",
+    "reg.fit(X_train,y_train)\n",
+    "y_pred = reg.predict(X_test)\n",
+    "print(reg.predict([[1.35]]))\n",
     "reg.coef_, reg.intercept_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "27.82809103252014"
+       "0.6345158782661012"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "r2_score(y_test,y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.model_selection import cross_val_score\n",
+    "# np.mean(cross_val_score(reg,X,y ,scoring='r2',cv=10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.125973315135614"
+      ]
+     },
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,21 +158,23 @@
     "    self.b = -120\n",
     "    self.lr = learning_rate\n",
     "    self.epochs = epochs\n",
-    "  def fit(self,X,y):\n",
+    "  def fit(self,X_train,y_train):\n",
     "    print(self.b)\n",
     "    for i in range(self.epochs):\n",
-    "      loss_slope = -2* np.sum(y - self.m * X.ravel() - self.b)\n",
-    "      self.b = self.b - self.lr * loss_slope\n",
-    "      print(self.b)\n",
-    "    print(self.b)\n",
+    "      loss_slope_b = -2* np.sum(y_train - self.m * X_train.ravel() - self.b)\n",
+    "      loss_slope_m = -2* np.sum((y_train - self.m * X_train.ravel() - self.b) * X_train.ravel())\n",
+    "      self.b = self.b - self.lr * loss_slope_b\n",
+    "      self.m = self.m - self.lr * loss_slope_m\n",
+    "      # print(self.b)\n",
+    "    print(self.m ,self.b)\n",
     "  \n",
-    "  def predict(self):\n",
-    "    pass"
+    "  def predict(self,X_test):\n",
+    "    return self.m * X_test + self.b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -130,113 +182,64 @@
      "output_type": "stream",
      "text": [
       "-120\n",
-      "-96.4589489117354\n",
-      "-77.62610804112371\n",
-      "-62.559835344634365\n",
-      "-50.506817187442884\n",
-      "-40.8644026616897\n",
-      "-33.15047104108716\n",
-      "-26.97932574460512\n",
-      "-22.042409507419492\n",
-      "-18.09287651767099\n",
-      "-14.933250125872188\n",
-      "-12.405549012433147\n",
-      "-10.383388121681913\n",
-      "-8.765659409080927\n",
-      "-7.471476439000138\n",
-      "-6.436130062935506\n",
-      "-5.6078529620838005\n",
-      "-4.945231281402436\n",
-      "-4.415133936857345\n",
-      "-3.9910560612212715\n",
-      "-3.651793760712413\n",
-      "-3.3803839203053268\n",
-      "-3.163256047979657\n",
-      "-2.989553750119122\n",
-      "-2.8505919118306937\n",
-      "-2.739422441199951\n",
-      "-2.650486864695357\n",
-      "-2.5793384034916818\n",
-      "-2.5224196345287413\n",
-      "-2.476884619358389\n",
-      "-2.4404566072221074\n",
-      "-2.411314197513082\n",
-      "-2.3880002697458615\n",
-      "-2.369349127532085\n",
-      "-2.354428213761064\n",
-      "-2.342491482744247\n",
-      "-2.3329420979307938\n",
-      "-2.3253025900800313\n",
-      "-2.319190983799421\n",
-      "-2.314301698774933\n",
-      "-2.310390270755342\n",
-      "-2.3072611283396696\n",
-      "-2.304757814407132\n",
-      "-2.3027551632611014\n",
-      "-2.301153042344277\n",
-      "-2.2998713456108177\n",
-      "-2.29884598822405\n",
-      "-2.298025702314636\n",
-      "-2.297369473587105\n",
-      "-2.29684449060508\n",
-      "-2.29642450421946\n",
-      "-2.2960885151109642\n",
-      "-2.2958197238241675\n",
-      "-2.2956046907947303\n",
-      "-2.29543266437118\n",
-      "-2.2952950432323402\n",
-      "-2.2951849463212683\n",
-      "-2.295096868792411\n",
-      "-2.295026406769325\n",
-      "-2.294970037150856\n",
-      "-2.294924941456081\n",
-      "-2.294888864900261\n",
-      "-2.2948600036556046\n",
-      "-2.29483691465988\n",
-      "-2.2948184434633\n",
-      "-2.294803666506036\n",
-      "-2.294791844940225\n",
-      "-2.294782387687576\n",
-      "-2.294774821885457\n",
-      "-2.2947687692437615\n",
-      "-2.2947639271304054\n",
-      "-2.2947600534397203\n",
-      "-2.2947569544871724\n",
-      "-2.2947544753251337\n",
-      "-2.294752491995503\n",
-      "-2.2947509053317985\n",
-      "-2.2947496360008346\n",
-      "-2.2947486205360637\n",
-      "-2.294747808164247\n",
-      "-2.294747158266794\n",
-      "-2.294746638348831\n",
-      "-2.294746222414461\n",
-      "-2.294745889666965\n",
-      "-2.294745623468968\n",
-      "-2.2947454105105702\n",
-      "-2.294745240143852\n",
-      "-2.294745103850478\n",
-      "-2.2947449948157783\n",
-      "-2.2947449075880186\n",
-      "-2.294744837805811\n",
-      "-2.294744781980045\n",
-      "-2.294744737319432\n",
-      "-2.2947447015909415\n",
-      "-2.294744673008149\n",
-      "-2.294744650141915\n",
-      "-2.294744631848928\n",
-      "-2.2947446172145383\n",
-      "-2.294744605507027\n",
-      "-2.2947445961410176\n",
-      "-2.29474458864821\n",
-      "-2.294744582653964\n",
-      "-2.294744582653964\n"
+      "28.13832870152982 -2.292914405809812\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 21.08738211],\n",
+       "       [ 18.02197569],\n",
+       "       [ 18.22458329],\n",
+       "       [ -8.12738837],\n",
+       "       [ 15.71235117],\n",
+       "       [ 58.21526836],\n",
+       "       [-15.06074806],\n",
+       "       [-11.35693575],\n",
+       "       [-15.83790153],\n",
+       "       [ -8.83298999],\n",
+       "       [-23.60638224],\n",
+       "       [ 14.76703511],\n",
+       "       [ 12.68618408],\n",
+       "       [-23.92079417],\n",
+       "       [-22.33839702],\n",
+       "       [-16.69875651],\n",
+       "       [ 24.51814652],\n",
+       "       [-17.01388105],\n",
+       "       [ -3.91177965],\n",
+       "       [-12.04585012]])"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "gd = GDRegressor(0.001, 100)\n",
-    "gd.fit(X,y)"
+    "gd = GDRegressor(0.001, 50)\n",
+    "gd.fit(X_train,y_train)\n",
+    "y_pred = gd.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6345158782661012"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "r2_score(y_test,y_pred)"
    ]
   },
   {
