--- a/Linear Regression/BatchGradientDescent.ipynb
+++ b/Linear Regression/BatchGradientDescent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "((442, 10), (442,))"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,17 +35,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(353, 10)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2,random_state=2)"
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2,random_state=2)\n",
+    "X_train.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,33 +130,27 @@
     "    self.intercept_ = 0\n",
     "    self.coef_ = np.ones(X_train.shape[1])\n",
     "    for i in range(self.epochs):\n",
-    "      y_hat = self.intercept_ + np.dot(X_train,self.coef_)\n",
-    "      intercept_der = -2 * np.mean(y_train - y_hat)\n",
-    "      self.intercept_ = self.intercept_ - (self.lr * intercept_der)\n",
+    "      y_hat = self.intercept_ + np.dot(X_train,self.coef_)      # y_hat = (353,1)     # X_train = (353,10)        # self.coef_ = (10,1)\n",
+    "      # print(y_hat.shape)\n",
+    "      intercept_der = -2 * np.mean(y_train - y_hat)             # y_train = (353,1)   # intercept_der = (353,1)   # \n",
+    "      self.intercept_ = self.intercept_ - (self.lr * intercept_der)       # self.intercept_ = (353,1)\n",
+    "      # print(self.intercept_)\n",
     "\n",
     "      y_hat = self.intercept_ + np.dot(X_train, self.coef_)\n",
-    "      coef_der = -2 * np.dot((y_train - y_hat),X_train) / X_train.shape[0]\n",
-    "      self.coef_ = self.coef_ - (self.lr * coef_der)\n",
+    "      coef_der = -2 * np.dot((y_train - y_hat),X_train) / X_train.shape[0]      # ceof_def = (10,1)    # y_train = (353,1)     # y_hat = (353,1)     # X_train = (353,10) \n",
+    "      self.coef_ = self.coef_ - (self.lr * coef_der)                            # self.coef_ = (1,10)\n",
+    "      # print(self.coef_)\n",
     "\n",
-    "    print(self.intercept_,self.coef_)\n",
+    "    # print(self.intercept_,self.coef_)\n",
     "  def predict(self,X_test):\n",
     "    return self.intercept_ + np.dot(X_test,self.coef_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "152.01368474816567 [  14.38686519 -173.7188266   491.58849871  323.9038478   -39.33361379\n",
-      " -115.99959924 -194.03708796  103.41851849  451.57289658   97.56756788]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gd = GDRegressor(epochs=1000, learning_rate=0.5)\n",
     "gd.fit(X_train,y_train)\n",
@@ -153,14 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.45345936083732175\n"
+      "-0.0028629880068460345\n"
      ]
     }
    ],
